--- a/src/styles.css
+++ b/src/styles.css
@@ -1,40 +1,13 @@
- /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
 
-body{
-	margin: 0px;
-	padding: 0px;
-	background-image: radial-gradient(#c7c7c7 25%, #c7c7c7 74%);
-	height: 90vh;
-	font-family: system-ui;
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-}
-
-.boxshaddow{
-    box-shadow: 5px 7px 15px 5px #b9b6b6;
-}
-
-.content-box{
-	padding: 20px;
-}
-
-.line{
-	border-left: 1px solid #c7c7c7;
-  height: 800px;
-  width: 2%;
-  margin-top: 30px;
-  float:left;
-}
-
-.p1 span{
-	font-weight: 100;
-	color: #c7c7c7;
-}
-.p2{
-	font-size: 20px;
-	color: #c7c7c7;
-	margin: 0px;
-	margin-top: 10px;
-}
-.clearfix{
-	clear: both;
-}
+.bg-img {
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+      url(img/bg-homepage_n.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100vh;
+  }
